--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html class="h-100">
 
 <head>
-    <title>CodeStar Blog</title>
+    <title>Find a Gardener</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -25,13 +25,13 @@
      
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container px-5">
-        <a class="navbar-brand" href="{{ url_for('index') }}">Home</a>
+        <a class="navbar-brand" href="">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('soilcalculator') }}">Soil Calculator</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('plantpage')}}">Plant Calculator</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('cancel')}}">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Customer Registration</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Business Registration</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Login</a></li>
             </ul>
         </div>
     </div>
@@ -47,7 +47,8 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="static/js/script.js"></script>
 </body>
-
+</html>
 
 </html>
