updated templates and views

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,12 +25,12 @@
      
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container px-5">
-        <a class="navbar-brand" href="">Home</a>
+        <a class="navbar-brand" href="{% url 'index' %}">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="">Customer Registration</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Business Registration</a></li>
+                <li class="nav-item"><a class="nav-link" href= "{% url 'customer_registration' %}">Customer Registration</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'business_registration' %}">Business Registration</a></li>
                 <li class="nav-item"><a class="nav-link" href="">Login</a></li>
             </ul>
         </div>
