--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <div class="container px-5">
         <div class="row gx-5 align-items-center">
             <div class="col-lg-6 order-lg-2">
-                <div class="p-5"><img class="img-fluid rounded-circle" src="../static/assets/img/soil.jpg" alt="..." /></div>
+                <div class="p-5"><img class="img-fluid rounded-circle" src="" alt="..." /></div>
             </div>
             <div class="col-lg-6 order-lg-1">
                 <div class="p-5">
@@ -36,7 +36,7 @@
     <div class="container px-5">
         <div class="row gx-5 align-items-center">
             <div class="col-lg-6">
-                <div class="p-5"><img class="img-fluid rounded-circle" src="../static/assets/img/plants.jpg" alt="..." /></div>
+                <div class="p-5"><img class="img-fluid rounded-circle" src="" alt="..." /></div>
             </div>
             <div class="col-lg-6">
                 <div class="p-5">
@@ -52,7 +52,7 @@
     <div class="container px-5">
         <div class="row gx-5 align-items-center">
             <div class="col-lg-6 order-lg-2">
-                <div class="p-5"><img class="img-fluid rounded-circle" src="../static/assets/img/delivery.jpg" alt="..." /></div>
+                <div class="p-5"><img class="img-fluid rounded-circle" src="" alt="..." /></div>
             </div>
             <div class="col-lg-6 order-lg-1">
                 <div class="p-5">
