adding business registration form to views

--- a/templates/busi_registration.html
+++ b/templates/busi_registration.html
@@ -3,5 +3,9 @@
 {% block content %}
 
 <h1>Business Form</h1>
+<form method = "post" enctype="multipart/form-data">
+    {{businessForm}}
+    <button type = "submit">Submit</button>
+</form>
 
 {%endblock%}
