--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
-    <link rel="stylesheet" href="{% static 'static\css\style.css' %}">
+    <link rel="stylesheet" href="{% static 'css\style.css' %}">
 
 </head>
 
@@ -31,7 +31,12 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href= "{% url 'customer_registration' %}">Customer Registration</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'business_registration' %}">Business Registration</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Login</a></li>
+                {% if user.is_authenticated %}
+                <li class="nav-item"><a class="nav-link" href= "{% url 'account_logout' %}">Logout</a></li>
+                {% else %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">Sign-Up</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}">Login</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
