--- a/templates/busi_registration.html
+++ b/templates/busi_registration.html
@@ -4,6 +4,7 @@
 
 <h1>Business Form</h1>
 <form method = "post" enctype="multipart/form-data">
+    {% csrf_token %}
     {%load crispy_forms_tags %}
     {{businessForm|crispy}}
     <button type = "submit">Submit</button>
