--- a/templates/base.html
+++ b/templates/base.html
@@ -27,12 +27,12 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
-                
+                {% if user.is_authenticated %}
                 <li class="nav-item"><a class="nav-link" href= "{% url 'account_logout' %}">Logout</a></li>
-                
+                {% else %}
                 <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">Sign-Up</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}">Login</a></li>
-                
+                {% endif %}
             </ul>
         </div>
     </div>
