--- a/templates/matches.html
+++ b/templates/matches.html
@@ -1,7 +1,47 @@
-{% extends 'base.html' %} {% block content %}
-<h1>Hey</h1>{{request.user.username}}<br>
-<h1>Below are you matches </h1>
-{% for item in allusers %}
-<li>{{ item }}</li>
+{% extends 'base.html' %}
+{% load static %} 
+{% block content %}
+<header class="masthead text-center text-white">
+    <div class="masthead-content">
+        <div class="container px-5">
+            <h1 class="masthead-heading mb-0">Welcome {{request.user.username}}</h1>
+            <h2 class="masthead-subheading mb-0"></h2>
+            <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Click here to see your matches!</a>
+        </div>
+    </div>
+    <div class="bg-circle-1 bg-circle"></div>
+    <div class="bg-circle-2 bg-circle"></div>
+    <div class="bg-circle-3 bg-circle"></div>
+    <div class="bg-circle-4 bg-circle"></div>
+</header>
+
+{% for key in allusers %}
+<ul>
+    <section id="scroll">
+        <div class="container px-5">
+            <div class="row gx-5 align-items-center">
+                <div class="col-lg-6">
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="" alt="..." /></div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="p-5">
+                        <h2 class="display-5">{{key.username}}</h2>
+                        <h3 class="display-6">Location</h3>
+                        <ul>{{key.location}}</ul>
+                        <h3 class="display-6">Services Provided</h3>
+                        {% for need in key.needs%}
+                        <ul>{{need}}</ul>
+                        {% endfor %}
+                        <h3 class="display-6">Contact</h3>
+                        <ul>{{key.email}}</ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</ul>   
+   
+
+
 {% endfor %}
 {% endblock content %}
