--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
                 {% if user.is_authenticated %}
+                <li class="nav-item"><a class="nav-link" href= "{% url 'Matches' %}">Your Matches</a></li>
                 <li class="nav-item"><a class="nav-link" href= "{% url 'account_logout' %}">Logout</a></li>
                 {% else %}
                 <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">Sign-Up</a></li>
