--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+
+
 {% block content %}
 
 <header class="masthead text-center text-white">
@@ -20,12 +22,13 @@
     <div class="container px-5">
         <div class="row gx-5 align-items-center">
             <div class="col-lg-6 order-lg-2">
-                <div class="p-5"><img class="img-fluid rounded-circle" src="" alt="..." /></div>
+                <div class="p-5"><img class="img-fluid rounded-circle" src="static/images/business.jpg" alt="..." /></div>
             </div>
             <div class="col-lg-6 order-lg-1">
                 <div class="p-5">
                     <h2 class="display-4">Businesses</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                    <p>"It was so easy for customers to find us and contact us for work based on a variety of their needs and location"</p>
+                    <p>Theo(London Gardens)</p>
                 </div>
             </div>
         </div>
@@ -36,33 +39,20 @@
     <div class="container px-5">
         <div class="row gx-5 align-items-center">
             <div class="col-lg-6">
-                <div class="p-5"><img class="img-fluid rounded-circle" src="" alt="..." /></div>
+                <div class="p-5"><img class="img-fluid rounded-circle" src="static/images/customer.jpg" alt="..." /></div>
             </div>
             <div class="col-lg-6">
                 <div class="p-5">
                     <h2 class="display-4">Customers</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                    <p>"I was amazed at how quickly I was able to identify companies who could carry out the work that I wanted doing!"</p>
+                    <p> Steve(Birmingham)</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<!-- Content section 3-->
-<section>
-    <div class="container px-5">
-        <div class="row gx-5 align-items-center">
-            <div class="col-lg-6 order-lg-2">
-                <div class="p-5"><img class="img-fluid rounded-circle" src="" alt="..." /></div>
-            </div>
-            <div class="col-lg-6 order-lg-1">
-                <div class="p-5">
-                    <h2 class="display-4">Orders</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+
+
 
 
 {%endblock%}
