--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -2,10 +2,31 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Sign Out" %}{% endblock %}
+
 
 {% block content %}
-<div class="container">
+<header class="masthead text-center text-white">
+    <div class="masthead-content">
+        <div class="container px-5">
+            <h1 class="masthead-heading mb-0">{{request.user.username}}</h1>
+            <h2 class="masthead-subheading mb-0">Are you sure you want to Sign out?</h2>
+    
+        </div>
+        <form method="post" action="{% url 'account_logout' %}">
+            {% csrf_token %}
+            {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+            {% endif %}
+            <button class="btn btn-primary btn-xl rounded-pill mt-5" type="submit">{% trans 'Sign Out' %}</button>
+        </form>
+    </div>
+    <div class="bg-circle-1 bg-circle"></div>
+    <div class="bg-circle-2 bg-circle"></div>
+    <div class="bg-circle-3 bg-circle"></div>
+    <div class="bg-circle-4 bg-circle"></div>
+</header>
+<section>
+    <div class="container px-5">
     <div class="row">
         <div class="col-md-8 mt-3 offset-md-2">
             <h3>{% trans "Sign Out" %}</h3>
@@ -26,4 +47,6 @@
         </div>
     </div>
 </div>
+</section>
+
 {% endblock %}
