update in views to convert msflist to string
convert msfList to string for user.needs. to allow .filter() to correctly function

--- a/templates/matches.html
+++ b/templates/matches.html
@@ -33,15 +33,14 @@
                         <ul>{{need}}</ul>
                         {% endfor %}
                         <h3 class="display-6">Contact</h3>
-                        <ul>{{key.email}}</ul>
+                        <ul id = "emailCopy">{{key.email}}</ul>
+                        <button onclick="clickCopy()">Copy Email</button>
+                        <ul>{{key.user_type}}</ul>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 </ul>   
-   
-
-
 {% endfor %}
 {% endblock content %}
