updating filter method within views
matches function filter method for user.needs

--- a/templates/matches.html
+++ b/templates/matches.html
@@ -35,7 +35,7 @@
                         <h3 class="display-6">Contact</h3>
                         <ul id = "emailCopy">{{key.email}}</ul>
                         <button onclick="clickCopy()">Copy Email</button>
-                        <ul>{{key.user_type}}</ul>
+                        
                     </div>
                 </div>
             </div>
@@ -43,4 +43,7 @@
     </section>
 </ul>   
 {% endfor %}
+
 {% endblock content %}
+{% block scripts %} 
+{% endblock %}
