--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load static %}
 
 
 {% block content %}
@@ -22,7 +22,7 @@
     <div class="container px-5">
         <div class="row gx-5 align-items-center">
             <div class="col-lg-6 order-lg-2">
-                <div class="p-5"><img class="img-fluid rounded-circle" src="static/images/business.jpg" alt="..." /></div>
+                <div class="p-5"><img class="img-fluid rounded-circle" src="{ static 'images\business.jpg'}" alt="..." /></div>
             </div>
             <div class="col-lg-6 order-lg-1">
                 <div class="p-5">
@@ -39,7 +39,7 @@
     <div class="container px-5">
         <div class="row gx-5 align-items-center">
             <div class="col-lg-6">
-                <div class="p-5"><img class="img-fluid rounded-circle" src="static/images/customer.jpg" alt="..." /></div>
+                <div class="p-5"><img class="img-fluid rounded-circle" src="{ static 'images\customer.jpg'}" alt="..." /></div>
             </div>
             <div class="col-lg-6">
                 <div class="p-5">
