--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
                 {% if user.is_authenticated %}
+                <li class="nav-item"><a class="nav-link" href= "{% url 'profile' %}">Your Profile</a></li> 
                 <li class="nav-item"><a class="nav-link" href= "{% url 'Matches' %}">Your Matches</a></li>
                 <li class="nav-item"><a class="nav-link" href= "{% url 'account_logout' %}">Logout</a></li>
                 {% else %}
