--- a/templates/matches.html
+++ b/templates/matches.html
@@ -27,14 +27,18 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="{ static 'images\business.jpg'}" alt="..." /></div>
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="{% static 'images\spade.png' %}" alt="..." /></div>
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
-                            <h2 class="display-5">{{key.username}}</h2>
+                            <h2 class="display-5">{{key.username|capfirst}}</h2>
                             <h3 class="display-6">Location</h3>
                             <ul>{{key.location}}</ul>
-                            <h3 class="display-6">Services Provided/Needed</h3>
+                            {% if bus == True %}
+                            <h3 class="display-6">Services needed</h3>
+                            {% else %}
+                            <h3 class="display-6">Services Provided</h3>
+                            {% endif %}
                             {% for need in key.needs%}
                             <ul>{{need}}</ul>
                             {% endfor %}
