updating requirements.txt

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                     <h2 class="display-4">About</h2>
                     <p></p>
                     
-                    <p>You can still sign up where you currently live, members may start appearing in your area soon.</p>
+                    <p>Welcome to Find-a-Gardener, sign-up to see what gardeners or customers are in your area.</p>
                 </div>
             </div>
         </div>
