--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
-
 {% load i18n %}
 {% load account socialaccount %}
-
+{% load crispy_forms_tags %}
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
-
 {% block content %}
 <header class="masthead text-center text-white">
     <div class="masthead-content">
@@ -23,8 +21,6 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 mt-3 offset-md-2">
-            
-
             <p>{% blocktrans %}Welcome back to the Find a Gardner. Please log in Below. If
                 you
                 have not yet created an account, then <a class="link" href="{{ signup_url }}">sign up</a>
@@ -34,8 +30,9 @@
     <div class="row">
         <div class="col-md-8 mt-3 offset-md-2">
             <form class="login" method="POST" action="{% url 'account_login' %}">
+                <!--Allauth login form-->
                 {% csrf_token %}
-                {{ form.as_p }}
+                {{ form|crispy}}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
