--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,6 @@
     <div class="masthead-content">
         <div class="container px-5">
             <h1 class="masthead-heading mb-0">Welcome</h1>
-            <h2 class="masthead-subheading mb-0"></h2>
             <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>
         </div>
     </div>
@@ -20,24 +19,23 @@
 </header>
 <!-- Content section 1-->
 <section id="scroll">
-    <div class="container px-5 align-items-center">
-        <div class="row gx-5 align-items-center">
-            <div class="col-lg-6 order-lg-2">
-                <div class="p-5"><img class="img-fluid rounded-circle" src="{% static 'images\atlas.jpg' %}" alt="..." /></div>
-            </div>
-            <div class="col-lg-6 order-lg-1">
+    <div class="container px-5 text-center">
+        
+            
+            <div class="col-lg-12 text-center">
                 <div class="p-5">
                     <h2 class="display-4">About</h2>
-                    <p></p>
+                    
                     
                     <p>Welcome to Find-a-Gardener, sign-up to see what gardeners or customers are in your area.</p>
+                    <p>Finding a gardener or customers can be difficult, lets try to make that easier.</p>
                 </div>
             </div>
-        </div>
+    
     </div>
     <div class="container px-5 align-items-center">
         <div class="row gx-5 align-items-center">
-            <div class="col-lg-6 order-lg-2">
+            <div class="col-lg-6">
                 <div class="p-5"><img class="img-fluid rounded-circle" src="{% static 'images\atlas.jpg' %}" alt="..." /></div>
             </div>
             <div class="col-lg-6 order-lg-1">
@@ -45,7 +43,7 @@
                     <h2 class="display-4">Locations</h2>
                     <p>We hope to be up and running in more areas soon, for now find-a-gardener is operating in these locations</p>
                     {% for data in locations %}
-                    <ul class ="list-inline">{{data.location|capfirst}}</ul>
+                    <ul class ="list-inline">.{{data.location|capfirst}}</ul>
                     {% endfor %}
                     <p>You can still sign up where you currently live, members may start appearing in your area soon.</p>
                 </div>
@@ -54,7 +52,7 @@
     </div>
     <div class="container px-5">
         <div class="row gx-5 align-items-center">
-            <div class="col-lg-6 order-lg-2">
+            <div class="col-lg-6 order-lg-3">
                 <div class="p-5"><img class="img-fluid rounded-circle" src="{% static 'images\business.jpg' %}" alt="..." /></div>
             </div>
             <div class="col-lg-6 order-lg-1">
