Adding Delete() fuinction + styleing changes
Delete function added to allow users to delete their profile, Css changes to reflect a more 'green enviroment'

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
                 <div class="p-5">
                     <h2 class="display-4">Customers</h2>
                     <p>"I was amazed at how quickly I was able to identify companies who could carry out the work that I wanted doing!"</p>
-                    <p> Steve(Birmingham)</p>
+                    <p> Cameron(Sheffield)</p>
                 </div>
             </div>
         </div>
