--- a/templates/profile.html
+++ b/templates/profile.html
@@ -51,6 +51,7 @@
                 <br><br>
                 <button type="submit" class="btn btn-dark btn-lg">Save Changes</button>
                 <button type="reset" class="btn btn-dark btn-lg">Reset</button>
+                <a type="delete" class="btn btn-dark btn-lg" href = "{% url 'delete' %}">Delete Account</a>
             </form>
             </form>
         </div>
