adding docs folder for readme images

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -21,10 +21,9 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 mt-3 offset-md-2">
-            <p>{% blocktrans %}Welcome back to the Find a Gardner. Please log in Below. If
-                you
-                have not yet created an account, then <a class="link" href="{{ signup_url }}">sign up</a>
-                first.{% endblocktrans %}</p>
+            <p>{% blocktrans %}Welcome back to the Find a Gardener. Please log in below. If
+                you have not yet created an account, then <a class="link" href="{{ signup_url }}">sign up</a>
+                .{% endblocktrans %}</p>
         </div>
     </div>
     <div class="row">
