Small grammar/spelling tweaks

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         <div class="col-lg-12 text-center">
             <div class="p-5">
                 <h2 class="display-4">About</h2>
-                <p>Finding a gardener or customers can be difficult</p>
+                <p>Finding a Gardener or Customers can be difficult</p>
                 <p>We make the process easier for both sides. Sign up now to get started.</p>
             </div>
         </div>
