--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -20,7 +20,7 @@
 <div class="container px-5">
     <div class="row">
         <div class="col-md-8 mt-3 offset-md-2">
-            <p>{% blocktrans %}Welcome back to Find a Gardener. If you already have an account? Then please <a
+            <p>{% blocktrans %}Welcome to Find a Gardener. If you already have an account? Then please <a
                     class="link" href="{{ login_url }}">Log in</a>{% endblocktrans %}</p>
         </div>
     </div>
