w3 validator html fix

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
                     <p>We hope to be up and running in more areas soon, for now Find-A-Gardener is operating in these
                         locations</p>
                     {% for data in locations %}
-                    <ul class="list-inline">.{{data.location|capfirst}}</ul>
+                    <ul class="list-inline"><li>.{{data.location|capfirst}}</li></ul>
                     {% endfor %}
                     <p>You can still sign up where you currently live, members may start appearing in your area soon.
                     </p>
