--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <head>
 
     <title>Find a Gardener</title>
-    
+    <meta charset="utf-8">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
     <!--Css file-->
-    <link rel="stylesheet" href="{% static 'css\styles.css' %}">
+    <link href="{% static 'css\styles.css' %}" rel="stylesheet">
 
 </head>
 
@@ -29,19 +29,19 @@
     <!--Nav bar-->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container px-5">
-            <a class="navbar-brand" href="{% url 'index' %}">Home</a>
+            <a href="{% url 'index' %}" class="navbar-brand">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
                     class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}">Your Profile</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'Matches' %}">Your Matches</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Logout</a></li>
+                    <li class="nav-item"><a href="{% url 'profile' %}" class="nav-link">Your Profile</a></li>
+                    <li class="nav-item"><a href="{% url 'Matches' %}" class="nav-link">Your Matches</a></li>
+                    <li class="nav-item"><a href="{% url 'account_logout' %}" class="nav-link">Logout</a></li>
                     {% else %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">Sign-Up</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}">Login</a></li>
+                    <li class="nav-item"><a href="{% url 'account_signup' %}" class="nav-link">Sign-Up</a></li>
+                    <li class="nav-item"><a href="{% url 'account_login' %}" >Login</a></li>
                     {% endif %}
                 </ul>
             </div>
@@ -52,12 +52,13 @@
     {% block content %}{% endblock %}
 
 
-</body>
+
 <footer class="py-5 bg-black">
     <div class="container px-5">
         <p class="m-0 text-center text-white small">Copyright &copy; Josh Mclynn 2022</p>
     </div>
 </footer>
+</body>
 {% block scripts %}
 <!--Scripts including boostrap-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
