missing class tag from login link

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                     <li class="nav-item"><a href="{% url 'account_logout' %}" class="nav-link">Logout</a></li>
                     {% else %}
                     <li class="nav-item"><a href="{% url 'account_signup' %}" class="nav-link">Sign-Up</a></li>
-                    <li class="nav-item"><a href="{% url 'account_login' %}" >Login</a></li>
+                    <li class="nav-item"><a href="{% url 'account_login' %}" class="nav-link">Login</a></li>
                     {% endif %}
                 </ul>
             </div>
